# DentaLens-AI

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  plan.md  pyproject.toml
data/seed/benefit_plans/: delta_hmo_basic.md  delta_ppo_gold.md  delta_ppo_point_of_service.md  delta_ppo_silver.md  delta_ppo_standard.md
data/seed/claims/: providers.json  synthetic_claims.csv
data/seed/faqs/: claims_faq.md  coverage_faq.md  general_dental_faq.md  programs_faq.md
data/seed/procedures/: cdt_codes.json
docs/: agent_design.md  api_reference.md  architecture.md  interview_prep.md
scripts/: run_evaluation.py  seed_vectorstore.py
src/dentalens/: __init__.py
src/dentalens/api/: app.py  dependencies.py
src/dentalens/api/middleware/: error_handler.py  request_logging.py
src/dentalens/api/routers/: benefits.py  chat.py  claims.py  evaluation.py  health.py
src/dentalens/api/schemas/: requests.py  responses.py
src/dentalens/config/: __init__.py  constants.py  logging_config.py  settings.py
src/dentalens/domain/: enums.py  exceptions.py
src/dentalens/domain/models/: __init__.py  benefit_plan.py  claim.py  conversation.py  evaluation.py
src/dentalens/frontend/: app.py
src/dentalens/frontend/.streamlit/: config.toml
tests/: conftest.py
tests/evaluation/: golden_qa_pairs.json
tests/integration/: test_agent_routing.py  test_api_endpoints.py  test_rag_pipeline.py
tests/unit/: test_claim_model.py  test_conversation_manager.py  test_evaluation_metrics.py  test_prompt_templates.py  test_retrieval_service.py  test_router_agent.py
(+30 files in other folders)
